# ros2_cafe_robot

./: CMakeLists.txt  README.md  package.xml
config/: ekf.yaml  navigation_parameters.yaml  ros_gz_bridge.yaml
launch/: controllers.luanch.py  ekf_launch.launch.py  navigation.launch.py  robot_ekf.launch.py  robot_launch.launch.py  robot_state_publisher.py
maps/: cafe_world_map.pgm  cafe_world_map.yaml
mesh/: foodplate_modified.dae  left_arm_modified.dae
model/: robot.xacro
robot_cafe_bringup/: CMakeLists.txt  package.xml
robot_cafe_bringup/launch/: bringup.launch.py
robot_cafe_sim/: CMakeLists.txt  package.xml
robot_cafe_sim/config/: ekf.yaml  navigation_parameters.yaml  ros2_controllers.yaml  ros_gz_bridge.yaml
robot_cafe_sim/launch/: controllers.launch.py  ekf_launch.launch.py  navigation.launch.py  robot_ekf.launch.py  robot_launch.launch.py  robot_state_publisher.py
robot_cafe_sim/maps/: cafe_map.pgm  cafe_map.yaml
robot_cafe_sim/mesh/: right_arm_modified.dae
robot_cafe_sim/model/: robot.xacro
robot_cafe_sim/rviz/: nav2_default_view.rviz
robot_cafe_sim/scripts/: run_ekf.sh  run_navigation.sh
robot_manager/: CMakeLists.txt  package.xml
robot_manager/launch/: manager.launch.py
robot_manager/msg/: RobotStatus.msg
robot_manager/src/: cafe_task_manager.cpp
robot_manager/srv/: AddOrder.srv
robot_manager_interface/: package.xml  setup.cfg  setup.py
robot_manager_interface/launch/: interface.launch.py
robot_manager_interface/robot_manager_interface/: web_bridge.py
robot_manager_interface/static/: app.js  style.css
robot_manager_interface/templates/: index.html
rviz/: rviz_parameters.rviz
scripts/: run_ekf.sh  run_navigation.sh
src/: cmd_vel_relay.cpp
worlds/: cafe.world  empty.world
