<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_cafe_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for launching the whole CafeRobot system.</description>
  <maintainer email="engahmedhassan309@gmail.com">ahmed</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>robot_cafe_sim</exec_depend>
  <exec_depend>robot_manager</exec_depend>
  <exec_depend>robot_manager_interface</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
