<?xml version="1.0"?>
<package format="3">
  <name>robot_manager_interface</name>
  <version>0.0.0</version>
  <description>Web dashboard for robot manager.</description>
  <maintainer email="engahmedhassan309@gmail.com">ahmed</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_srvs</depend>
  <depend>robot_manager</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>ament_index_python</depend>

  <exec_depend>python3-flask</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
